<resources>
    <string name="app_name">Wingspan</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_redirect">ALready have an account? Login</string>
    <string name="log_in">Log in</string>
    <string name="sign_up_redirect">Dont have an account? Sign up</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="species_code">Species Code</string>
    <string name="scientific_name">Scientific Name</string>
    <string name="common_name">Common Name</string>
    <string name="add_sighting">Add Sighting</string>
    <string name="choose_hotspot_optional">Choose Hotspot (Optional)</string>
    <string name="logout">Logout</string>
    <string name="request_account_deletion">Request Account Deletion</string>
</resources>