<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="430dp"
        android:padding="20dp"
        tools:ignore="UselessParent">

        <EditText
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/login_email"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:hint="@string/email"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="8dp"
            android:textColor="@color/black"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/login_password"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/baseline_password_24"
            android:drawablePadding="8dp"
            android:textColor="@color/black"
            android:importantForAutofill="no" />



        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:text="@string/log_in"
            android:id="@+id/btn_login"
            android:textSize="18sp"
            app:cornerRadius = "30dp"
            android:backgroundTint="@color/WingSpanRed"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signupRedirect"
            android:text="@string/sign_up_redirect"
            android:layout_gravity="center"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textColor="@color/black"/>



    </LinearLayout>



</LinearLayout>